Funcionalidad en el submenu
Revisar JS, Cambio de BG...

--- a/index.html
+++ b/index.html
@@ -107,58 +107,159 @@
             </nav>
 
             <div class="menu__div submenu">
-              <div class="submenu__platforms">
-                <a href="https://www.instant-gaming.com/es/pc/" class="submenu__link">Plataformas</a>
-                <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-                </svg>
+              <div class="submenu__category">
+                <div class="submenu__platforms">
+                  <a href="https://www.instant-gaming.com/es/pc/" class="submenu__link">Plataformas</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__grid grid">
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-stm.png" alt="Steam" class="grid__img" /><span class="grid__name">Steam</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/ubisoft-connect/" class="grid__link"><img src="/assets/img/icon-uplay.png" alt="Ubisoft Connect" class="grid__img" /><span class="grid__name">Ubisoft Connect</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/ea-app/" class="grid__link"><img src="/assets/img/icon-ea-app.png" alt="EA App" class="grid__img" /><span class="grid__name">EA App</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/battle-net/" class="grid__link"><img src="/assets/img/icon-battle-net.png" alt="Battle.net" class="grid__img" /><span class="grid__name">Battle.net</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/rockstar/" class="grid__link"><img src="/assets/img/icon-rock.png" alt="Rockstar" class="grid__img" /> <span class="grid__name">Rockstar</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/gog-com/" class="grid__link"><img src="/assets/img/icon-gog-com.png" alt="GOG.com" class="grid__img" /><span class="grid__name">GOG.com</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/microsoft-store/" class="grid__link"><img src="/assets/img/icon-ms-store.png" alt="Microsoft Store" class="grid__img" /><span class="grid__name">Microsoft Store</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/epic-games/" class="grid__link"><img src="/assets/img/icon-epic.png" alt="Epic" class="grid__img" /><span class="grid__name">Epic</span></a>
+                  </li>
+                </ul>
+
+                <div class="submenu__gifts">
+                  <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/pc/" class="submenu__link">Tarjetas regalo</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__flex flex">
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/pc-steam-gift.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Tarjetas regalo Steam</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/pc-gift-3.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Tarjetas regalo IG</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/pc-blizzard-gift.png" alt="Tarjetas regalo Blizzard" class="flex__img" /><span class="flex__name">Tarjetas regalo Blizzard</span></a>
+                  </li>
+                </ul>
               </div>
+              <div class="submenu__category">
+                <div class="submenu__platforms">
+                  <a href="https://www.instant-gaming.com/es/playstation/" class="submenu__link">Consolas</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
 
-              <ul class="submenu__grid grid">
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-stm.png" alt="Steam" class="grid__img" /><span class="grid__name">Steam</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/ubisoft-connect/" class="grid__link"><img src="/assets/img/icon-uplay.png" alt="Ubisoft Connect" class="grid__img" /><span class="grid__name">Ubisoft Connect</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/ea-app/" class="grid__link"><img src="/assets/img/icon-ea-app.png" alt="EA App" class="grid__img" /><span class="grid__name">EA App</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/battle-net/" class="grid__link"><img src="/assets/img/icon-battle-net.png" alt="Battle.net" class="grid__img" /><span class="grid__name">Battle.net</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/rockstar/" class="grid__link"><img src="/assets/img/icon-rock.png" alt="Rockstar" class="grid__img" /> <span class="grid__name">Rockstar</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/gog-com/" class="grid__link"><img src="/assets/img/icon-gog-com.png" alt="GOG.com" class="grid__img" /><span class="grid__name">GOG.com</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/microsoft-store/" class="grid__link"><img src="/assets/img/icon-ms-store.png" alt="Microsoft Store" class="grid__img" /><span class="grid__name">Microsoft Store</span></a>
-                </li>
-                <li class="grid__li">
-                  <a href="https://www.instant-gaming.com/es/pc/epic-games/" class="grid__link"><img src="/assets/img/icon-epic.png" alt="Epic" class="grid__img" /><span class="grid__name">Epic</span></a>
-                </li>
-              </ul>
+                <ul class="submenu__grid grid">
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-play4.png" alt="Steam" class="grid__img" /><span class="grid__name">Playstation 4</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/ubisoft-connect/" class="grid__link"><img src="/assets/img/icon-play5.png" alt="Ubisoft Connect" class="grid__img" /><span class="grid__name">Playstation 5</span></a>
+                  </li>
+                </ul>
 
-              <div class="submenu__gifts">
-                <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/pc/" class="submenu__link">Tarjetas regalo</a>
-                <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-                </svg>
+                <div class="submenu__gifts">
+                  <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/playstation-store/" class="submenu__link">Tarjetas regalo</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__flex flex">
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/ps-store.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Tarjetas regalo Steam</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/ps-plus.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Tarjetas regalo IG</span></a>
+                  </li>
+                </ul>
               </div>
+              <div class="submenu__category">
+                <div class="submenu__platforms">
+                  <a href="https://www.instant-gaming.com/es/xbox/" class="submenu__link">Consolas</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
 
-              <ul class="submenu__flex flex">
-                <li class="flex__li">
-                  <a href="" class="flex__link"><img src="/assets/img/pc-steam-gift.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Tarjetas regalo Steam</span></a>
-                </li>
-                <li class="flex__li">
-                  <a href="" class="flex__link"><img src="/assets/img/pc-gift-3.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Tarjetas regalo IG</span></a>
-                </li>
-                <li class="flex__li">
-                  <a href="" class="flex__link"><img src="/assets/img/pc-blizzard-gift.png" alt="Tarjetas regalo Blizzard" class="flex__img" /><span class="flex__name">Tarjetas regalo Blizzard</span></a>
-                </li>
-              </ul>
+                <ul class="submenu__grid grid">
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-xbx-360.png" alt="Steam" class="grid__img" /><span class="grid__name">Xbox ONE</span></a>
+                  </li>
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/ubisoft-connect/" class="grid__link"><img src="/assets/img/icon-xbx-series.png" alt="Ubisoft Connect" class="grid__img" /><span class="grid__name">Xbox Series X|S</span></a>
+                  </li>
+                </ul>
+
+                <div class="submenu__gifts">
+                  <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/microsoft-store/" class="submenu__link">Tarjetas regalo</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__flex flex">
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/xbox-gold.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Xbox Live Gold</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/xbox-game.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Xbox Game Pass</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/xbox-gift.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Xbox Gift Card</span></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="submenu__category">
+                <div class="submenu__platforms">
+                  <a href="https://www.instant-gaming.com/es/nintendo/switch/" class="submenu__link">Consolas</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__grid grid">
+                  <li class="grid__li">
+                    <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-swt.png" alt="Steam" class="grid__img" /><span class="grid__name">Nintendo Switch</span></a>
+                  </li>
+                </ul>
+
+                <div class="submenu__gifts">
+                  <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/nintendo-eshop/" class="submenu__link">Tarjetas regalo</a>
+                  <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                  </svg>
+                </div>
+
+                <ul class="submenu__flex flex">
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/nintendo-eshop.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Nintendo eShops Cards</span></a>
+                  </li>
+                  <li class="flex__li">
+                    <a href="" class="flex__link"><img src="/assets/img/nintendo-online.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Nintendo Memberships</span></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
 
@@ -181,15 +282,15 @@
 
     <main class="main">
       <div class="background__div">
-        <a href="https://www.instant-gaming.com/promo/black-friday/" class="background__a">
+        <a href="https://www.instant-gaming.com/es/2462-comprar-grand-theft-auto-vi-pc-juego-rockstar/" class="background__a">
           <picture class="parallax__picture">
-            <source srcset="/assets/img/homeBanner/campaign-banner-400x250.jpg" media="(max-width: 400px)" />
-            <source srcset="/assets/img/homeBanner/campaign-banner-500x270.jpg" media="(max-width: 500px)" />
-            <source srcset="/assets/img/homeBanner/campaign-banner-700x300.jpg" media="(max-width: 700px)" />
-            <source srcset="/assets/img/homeBanner/campaign-banner-1000x350.jpg" media="(max-width: 1000px)" />
-            <source srcset="/assets/img/homeBanner/campaign-banner-1400x500.jpg" media="(max-width: 1400px)" />
-            <source srcset="/assets/img/homeBanner/campaign-banner-1920x620.jpg" media="(max-width: 1920px)" />
-            <img src="/assets/img/homeBanner/campaign-banner.jpg" alt="Black Magic Friday" />
+            <source srcset="/assets/img/gta6-400.jpg" media="(max-width: 400px)" />
+            <source srcset="/assets/img/gta6-500.jpg" media="(max-width: 500px)" />
+            <source srcset="/assets/img/gta6-700.jpg" media="(max-width: 700px)" />
+            <source srcset="/assets/img/gta6-1000.jpg" media="(max-width: 1000px)" />
+            <source srcset="/assets/img/gta6-1400.jpg" media="(max-width: 1400px)" />
+            <source srcset="/assets/img/gta6-1920.jpg" media="(max-width: 1920px)" />
+            <img src="/assets/img/gta6.jpg" alt="Grand Thief Auto 6" />
           </picture>
         </a>
       </div>
