--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__wrapper--normal">
+      <div class="header__wrapper normal-wrapper">
         <div class="header__div">
           <h1 class="header__h1">
             <a href="/" class="header__a"><img src="/assets/img/logo-horizontal.svg" alt="Inicio" class="header__img" /></a>
@@ -293,7 +293,138 @@
         </a>
       </div>
       <section class="trends__section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dicta corporis eaque provident adipisci laboriosam distinctio, vitae necessitatibus consectetur explicabo minima, quasi odit expedita iusto deserunt consequatur corrupti delectus mollitia! Cupiditate nesciunt dicta dolore sunt laboriosam omnis quia itaque saepe asperiores. Veniam aperiam amet impedit doloribus incidunt, excepturi qui inventore quae quos ea asperiores. Qui quia quae odio illo iure! Maxime repudiandae ea tempore consequatur nisi voluptatibus enim provident vitae ut! Ipsa soluta deleniti sequi sunt ad officiis nisi earum repellat quibusdam sit rerum, magni obcaecati, suscipit, totam corrupti aliquam. Praesentium in illo et unde itaque, tempore repudiandae earum placeat quos rem doloribus, rerum laborum eum corrupti ex consequuntur alias dolorum, quasi iusto reprehenderit autem quod obcaecati! Accusamus, laudantium nostrum. Nisi error, totam cupiditate, deserunt fuga accusantium corrupti maxime voluptate nostrum nulla, unde hic aliquid dolorum modi natus rerum quidem soluta delectus et amet a. Pariatur dolores natus maxime optio!</p>
+        <div class="trends__wrapper narrow-wrapper">
+          <div class="trends__column">
+            <a href="https://www.instant-gaming.com/es/busquedas/" class="trends__link">
+              <h2 class="trends__h2">Tendencias</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="trends__svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </a>
+
+            <ul class="trends__container listing">
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline>
+                      <source src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm" />
+                    </video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-45%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Football Manager 2024</h3>
+                    <span class="listing__price">32.99€</span>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
   </body>
