--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           </ul>
         </div>
       </section>
-      <section class="reservations__section">
+      <div class="reservations__container">
         <div class="reservations__wrapper narrow__wrapper">
           <div class="reservations__column">
             <a href="https://www.instant-gaming.com/es/busquedas/" class="reservations__link">
@@ -590,7 +590,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </div>
       <section class="partner__section">
         <div class="partner__wrapper narrow__wrapper">
           <div class="partner__container">
@@ -604,6 +604,77 @@
           </div>
         </div>
       </section>
+      <div class="comments__container">
+        <div class="comments__wrapper normal__wrapper">
+          <ul class="comments__ul">
+            <li class="comments__li">
+              <div class="comments__user">
+                <img src="/assets/img/avatar1.jpg" alt="" class="comments__avatar" />
+                <div class="comments__info">
+                  <img src="/assets/img/stars-rating.svg" alt="" class="comments__stars" />
+                  <a href="https://www.instant-gaming.com/es/12866-comprar-attack-on-titan-2-final-battle-final-battle-pc-juego-steam/" class="comments__link">Attack on Titan 2: Final Battle</a>
+                </div>
+              </div>
+              <div class="comments__column">
+                <p class="comments__p">MIL GRACIAS !!!!!!! OS AMO</p>
+                <span class="comments__span">Hace 3 horas</span>
+              </div>
+            </li>
+            <li class="comments__li">
+              <div class="comments__user">
+                <img src="/assets/img/avatar2.jpg" alt="" class="comments__avatar" />
+                <div class="comments__info">
+                  <img src="/assets/img/stars-rating.svg" alt="" class="comments__stars" />
+                  <a href="https://www.instant-gaming.com/es/10639-comprar-train-sim-world-2-br-class-31-loco-add-on-pc-juego-steam/" class="comments__link">Train Sim World 2: BR Class 31 Loco Add-On</a>
+                </div>
+              </div>
+              <div class="comments__column">
+                <p class="comments__p">Perfecto, rápido y sin problemas. Perfecto como siempre.</p>
+                <span class="comments__span">Hace 18 horas</span>
+              </div>
+            </li>
+            <li class="comments__li">
+              <div class="comments__user">
+                <img src="/assets/img/avatar3.jpg" alt="" class="comments__avatar" />
+                <div class="comments__info">
+                  <img src="/assets/img/stars-rating.svg" alt="" class="comments__stars" />
+                  <a href="https://www.instant-gaming.com/es/1611-comprar-human-fall-flat-pc-mac-juego-steam/" class="comments__link">Human: Fall Flat</a>
+                </div>
+              </div>
+              <div class="comments__column">
+                <p class="comments__p">Qué buen servicio!</p>
+                <span class="comments__span">Hace 22 horas</span>
+              </div>
+            </li>
+            <li class="comments__li">
+              <div class="comments__user">
+                <img src="/assets/img/avatar4.jpg" alt="" class="comments__avatar" />
+                <div class="comments__info">
+                  <img src="/assets/img/stars-rating.svg" alt="" class="comments__stars" />
+                  <a href="https://www.instant-gaming.com/es/13213-comprar-microsoft-flight-simulator-40th-anniversary-edition-pc-xbox-series-x-s-40th-anniversary-edition-pc-xbox-series-x-s-juego-microsoft-store/" class="comments__link">Microsoft Flight Simulator 40th Anniversary Edition</a>
+                </div>
+              </div>
+              <div class="comments__column">
+                <p class="comments__p">Perfecto, clave al instante y funciona correctamente</p>
+                <span class="comments__span">Ayer</span>
+              </div>
+            </li>
+            <li class="comments__li">
+              <div class="comments__user">
+                <img src="/assets/img/avatar5.jpg" alt="" class="comments__avatar" />
+                <div class="comments__info">
+                  <img src="/assets/img/stars-rating.svg" alt="" class="comments__stars" />
+                  <a href="https://www.instant-gaming.com/es/2015-comprar-outcast-second-contact-pc-juego-steam/" class="comments__link">Outlast: Second Contact</a>
+                </div>
+              </div>
+              <div class="comments__column">
+                <p class="comments__p">Todo perfect</p>
+                <span class="comments__span">Ayer</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
   </body>
 </html>
